--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,9 +11,9 @@
         android:id="@+id/main_wallpaper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
         android:scaleType="centerCrop"
         android:src="@drawable/bg_1"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -26,8 +26,8 @@
         layout="@layout/toolbar_item"
         android:layout_width="match_parent"
         android:layout_height="@dimen/size_50"
-        android:gravity="center"
         android:layout_marginTop="@dimen/size_30"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +49,6 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/screen_time_widget"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/glassmorphism_on"
@@ -60,7 +59,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_semibold"
-                    android:text="Wallpaper"
+                    android:text="@string/wallpaper"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_size_18" />
 
@@ -73,7 +72,96 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/screen_time_widget"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/glassmorphism_on"
+                android:orientation="vertical"
+                android:padding="@dimen/size_16"
+                android:layout_marginTop="@dimen/size_16">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_semibold"
+                    android:text="@string/productive_mode"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_18" />
+
+                <include
+                    android:id="@+id/focus_setting"
+                    layout="@layout/switch_icon_setting_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_24" />
+
+                <include
+                    android:id="@+id/select_addictive_apps"
+                    layout="@layout/more_options_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_24"
+                    android:layout_marginStart="@dimen/size_32"/>
+
+                <include
+                    android:id="@+id/select_color_theme"
+                    layout="@layout/more_options_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_16"
+                    android:layout_marginStart="@dimen/size_32"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_16"
+                android:background="@drawable/glassmorphism_on"
+                android:orientation="vertical"
+                android:padding="@dimen/size_16">
+
+                <include
+                    android:id="@+id/review"
+                    layout="@layout/horizontal_icon_text_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <include
+                    android:id="@+id/share_app"
+                    layout="@layout/horizontal_icon_text_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_24" />
+
+                <include
+                    android:id="@+id/report"
+                    layout="@layout/horizontal_icon_text_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_24" />
+
+                <include
+                    android:id="@+id/tnc"
+                    layout="@layout/horizontal_icon_text_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_24" />
+
+                <include
+                    android:id="@+id/about_us"
+                    layout="@layout/horizontal_icon_text_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/size_24" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
+
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
